# docker-vscode-raspipico

./: CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: main.cpp
